# Lfx_WasmEdge

./: .gitignore  README.md
Project1/: .env  api_server.py  requirements.txt  try.py
Project1/Rust_coder_llm/Rust_coder_llm/: .env
Project1/Rust_coder_llm/Rust_coder_llm/generated_rust_project/: Cargo.toml
Project1/generated_rust_project/: Cargo.toml  README.md
Project1/generated_rust_project/src/: main.rs
Project1/knowledge_base/: error_handling.txt  error_patterns.txt  knowledge.json  memory_safety.txt  vector_cache.npz
Project1/src/: llm_client.py  rag_engine.py  rust_compiler.py
Project1/src/knowledge_base/: rust_docs.json  rust_patterns.rs
Project2/: .env  README.md  main.py  requirements.txt
Project2/generated_project/: Cargo.toml  README.md
Project2/generated_project/src/: bfs.rs  errors.rs  graph.rs  lib.rs  main.rs
Project2/generated_project/tests/: integration_test.rs  tests.rs
Project2/knowledge_base/: download_snapshots.py
Project3/: main.py
Project3/knowledge_base/: download_snapshots.py
Project3/src/: project_generator.py
Project4/: README.md  main.py  requirements.txt
Project4/src/: project_generator.py
Rust_coder_llm/Rust_coder_llm/: .gitignore  Readme.md  main.py  requirements.txt  try.py
Rust_coder_llm/Rust_coder_llm/src/: .env.example  llm_client.py  project_generator.py  rag_engine.py  rust_compiler.py
Rust_coder_llm/Rust_coder_llm/src/knowledge_base/: best_practices.txt  rust_docs.json  rust_patterns.rs
knowledge_base/: knowledge.json  rust_patterns.rs
(+1 files in other folders)
