```
[package]
name = "bfs_example"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of Breadth-First Search with error handling examples"
license = "MIT"
repository = "https://github.com/yourusername/bfs_example"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
```